Test 22
Added mostly finished menu system.